<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nativeAdTemplateContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MergeRootFrame"
    android:clickable="true"
    android:orientation="vertical"
    android:gravity="end"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/footerBtnll"
        android:background="@android:color/transparent"
        android:padding="8dp"
        >
        <LinearLayout
            android:id="@+id/templateContainer"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            />
    </ScrollView>




    <LinearLayout
        android:id="@+id/footerBtnll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deleteItmeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal|center|center_vertical"
            android:text="Do you really want to quit the app?"


            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center|center_horizontal"
                android:text="@string/CANCEL"
                android:textColor="@color/black"

                android:textSize="@dimen/text_medium"

                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/okBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"

                android:gravity="center_vertical|center|center_horizontal"
                android:text="@string/OK"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"

                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="invisible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/style"
                android:gravity="center_horizontal"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/adview_type"
                android:gravity="center_horizontal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/backgroundColorSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">
            <Button
                android:id="@+id/reloadAdButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/refresh_now"
                android:padding="8dp"
                />
            <Button
                android:id="@+id/showCodeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_code"
                android:padding="8dp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:textAlignment="center"
            android:gravity="start"
            />
    </LinearLayout>
</LinearLayout>

