<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/skipTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:layout_marginTop="20dp"

            android:gravity="right"
            android:paddingRight="20dp"
            android:text="Skip"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"


            android:visibility="gone" />

        <TextView
            android:id="@+id/dateTimeTodayTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center|center_vertical|center_horizontal"


            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="17"
            android:textColor="@color/black"
            android:textSize="52dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monthTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:layout_marginTop="0dp"


            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="December"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="normal" />

        <ProgressBar
            android:id="@+id/pb"
            style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp" />

        <RelativeLayout
            android:id="@+id/rectangleAdContainer"
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp" />

        <!-- <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_margin="10dp"
             android:orientation="vertical">


         </FrameLayout>-->
        <!--<RelativeLayout
            android:id="@+id/rectangleAdContainer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
           android:layout_margin="5dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />-->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">


            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal|center_vertical|center"

                android:layout_marginTop="20dp"
                android:contentDescription="TODO"
                android:src="@mipmap/ic_launcher" />


            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_horizontal"

                android:paddingBottom="30dp"
                android:text="@string/app_name"

                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon"
                android:layout_marginTop="155dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_horizontal"

                android:paddingBottom="0dp"
                android:text="@string/made_in"

                android:textColor="@color/grey"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon"
                android:layout_marginTop="170dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_horizontal"

                android:paddingBottom="0dp"
                android:text="@string/india_malaysia"

                android:textColor="@color/blue_green"
                android:textSize="15dp"
                android:textStyle="bold" />

            <!-- <ImageView
                 android:id="@+id/imgLogo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:src="@mipmap/ic_launcher" />-->

            <TextView
                android:id="@+id/aOneScannerTv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:text="A-One Scanner"
                android:textColor="#454545"
                android:textSize="10dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/appVersionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/aOneScannerTv"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#454545"
                android:textSize="10dp"
                android:textStyle="normal" />


        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>